add custom exceptions to the common file - add allowed origin to the config file - add backend env example - config start up in the main.py file

--- a/backend/env/backend/.env.example
+++ b/backend/env/backend/.env.example
@@ -4,6 +4,8 @@ VERSION=1.0.0
 # Project Environment
 ENV=development | staging | testing | production
 
+DOC_ROOT_USERNAME=
+DOC_ROOT_PASSWORD=
 
 # Redpanda/kafka
 REDPANDA_HOST="localhost"
