--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,20 @@
+# Environment variables
 .env
+
+# Virtual environments
 venv/
-.venv
-=2.0
+.venv/
+
+# Python cache
 __pycache__/
+*.pyc
+*.pyo
+
+# Logs
+logs/
+*.log
+
+# OS / editor junk
+.DS_Store
+.idea/
+.vscode/
