config router to the main.py file

--- a/backend/env/backend/.env.example
+++ b/backend/env/backend/.env.example
@@ -7,6 +7,8 @@ ENV=development | staging | testing | production
 DOC_ROOT_USERNAME=
 DOC_ROOT_PASSWORD=
 
+API_V1_STR=
+
 # Redpanda/kafka
 REDPANDA_HOST="localhost"
 REDPANDA_PORT=19092
