--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,12 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: aegis_postgres
+    env_file:
+      - ./backend/app/.env
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password123
-      POSTGRES_DB: aegis_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
